# swhid-mint

./: .gitignore  .linecop.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-MIT  README.md  clippy.toml  flake.nix  outdatty.yaml  tarpaulin.toml
.github/workflows/: ci.yml  pages.yml  release.yml
src/: git.rs  git_tests.rs  lib.rs  lib_tests.rs  test_support.rs
www/: index.html
